Prevent line break in no data available

--- a/features/polyExplorer/src/screens/companyInfo/companyRevenueChart/companyRevenueChart.css
+++ b/features/polyExplorer/src/screens/companyInfo/companyRevenueChart/companyRevenueChart.css
@@ -62,6 +62,7 @@
     left: 50%;
     top: 35%;
     padding-left: 16px;
+    width: 180px;
     transform: translateX(-50%);
     font-size: 14px;
 }
